# xxsynth

./: .gitignore  Cargo.toml  README.md  xxsynth_settings.json
src/: main.rs
xxsynth-app/: Cargo.toml
xxsynth-app/src/: audio.rs  config.rs  main.rs  settings.rs  ui.rs
xxsynth-winmm/: Cargo.toml
xxsynth-winmm/src/: lib.rs
