[package]
name = "xxsynth"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.14.0", features = ["tokio", "debug"] }
xsynth-core = "0.3.4"
xsynth-soundfonts = "0.3.4"
xsynth-render = "0.3.4"
xsynth-realtime = "0.3.4"
#midir = "0.10.3"不知道会不会用得到，回来再说

env_logger = "0.11.9"
tokio = { version = "1.49.0", features = ["full"] }
rfd = "0.17.2" # 用于文件选择对话框