[workspace]
members = [
    "xxsynth-app",
    "xxsynth-winmm",
]
resolver = "2"

[workspace.dependencies]
# 主框架
iced = {version = "0.14.0", features = ["tokio", "debug"] }
iced_aw = "0.13.0"
xsynth-core = "0.3.4"
xsynth-soundfonts = "0.3.4"
xsynth-render = "0.3.4"
xsynth-realtime = "0.3.4"
midir = "0.10.3"

# 小功能
env_logger = "0.11.9"
tokio = { version = "1.49.0", features = ["full"] }
rfd = "0.17.2" # 用于文件选择对话框
serde = {version = "1.0.228", features = ["derive"]} # 用于序列化配置文件
serde_json = "1.0.149"
anyhow = "1.0.101" # 用于错误处理
crossbeam-channel = "0.5.15" # 线程间通讯
once_cell = "1.21.3"
log = "0.4.29"
windows-sys = "0.61.2"