[package]
name = "xxsynth-app"
version = "0.1.0"
edition = "2024"

[dependencies]
# 暂时注释掉 GUI 依赖，先跑通底层音频
# iced = { workspace = true }
# iced_aw = { workspace = true }
# rfd = { workspace = true }

xsynth-core = { workspace = true }
xsynth-realtime = { workspace = true }
xsynth-soundfonts = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }